--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@
 BOT_TOKEN=8226732502:AAESAQPpMfRgH0yAGYSeugKO6dTS9CV1iHQ
 ADMIN_CHAT_ID=-4977951186
 
+# SBP payment test
+QRM_BASE=https://app.devwapiserv.qrm.ooo
+QRM_TOKEN=rkKfCQBI.qbJpZzh3RfANMmZUX56bBAdshQPpL2FD
+
 # Провайдеры оплат (чекауты)
 CHECKOUT_RUB=https://pay.example.ru/checkout
 CHECKOUT_CRYPTO=https://pay.example.com/crypto
@@ -13,6 +17,9 @@ WEBHOOK_SECRET_CRYPTO=replace_me
 # Ценообразование (с учётом комиссий/маржи)
 RUB_PER_STAR=1.8
 USDT_PER_STAR=0.028
+
+# Паблик для уведомлений
+PUBLIC_BASE=https://starsfabrica.store
 
 # Веб-сервер
 BASE_URL=https://shop.starsfabrica.store
