--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,25 @@
 # Telegram
-BOT_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-ADMIN_CHAT_ID=123456789
+BOT_TOKEN=8226732502:AAESAQPpMfRgH0yAGYSeugKO6dTS9CV1iHQ
+ADMIN_CHAT_ID=-4977951186
+
+# SBP payment test
+QRM_BASE=https://app.devwapiserv.qrm.ooo
+QRM_TOKEN=rkKfCQBI.qbJpZzh3RfANMmZUX56bBAdshQPpL2FD
 
 # Провайдеры оплат (чекауты)
 CHECKOUT_RUB=https://pay.example.ru/checkout
-CHECKOUT_CRYPTO=455984:AAwsyI1vpdZRoFSbXCTWpti37BTjGql76BR
+CHECKOUT_CRYPTO=https://pay.example.com/crypto
 
 # Секреты проверки подписи вебхуков
 WEBHOOK_SECRET_RUB=replace_me
 WEBHOOK_SECRET_CRYPTO=replace_me
 
 # Ценообразование (с учётом комиссий/маржи)
-RUB_PER_STAR=1.52
-USDT_PER_STAR=0.0009
+RUB_PER_STAR=1.8
+USDT_PER_STAR=0.028
+
+# Паблик для уведомлений
+PUBLIC_BASE=https://starsfabrica.store
 
 # Веб-сервер
 BASE_URL=https://shop.starsfabrica.store
